Updated parts of the code to latest SHVDN

--- a/SHVDNPro/SHVDNPro.vcxproj.filters
+++ b/SHVDNPro/SHVDNPro.vcxproj.filters
@@ -292,4 +292,7 @@
       <Filter>scripting\World</Filter>
     </CsCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
 </Project>
