--- a/SHVDNPro/SHVDNPro.vcxproj
+++ b/SHVDNPro/SHVDNPro.vcxproj
@@ -174,6 +174,9 @@
     <CsCompile Include="scripting\WeaponHash.cs" />
     <CsCompile Include="scripting\World.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <!-- Compile C# source files -->
   <Target Name="CsCompile" DependsOnTargets="ClCompile" BeforeTargets="Link" AfterTargets="ClCompile" Inputs="@(CsCompile)" Outputs="$(IntDir)$(TargetName).netmodule">
